[package]
name = "notegraph"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = "0.6.6"
actix-web = "4.10.2"
clap = { version = "4.5.36", features = ["derive"] }
convert_case = "0.8.0"
once_cell = "1.21.3"
rayon = "1.10.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
